# ManualMind

./: .env.sample  Dockerfile  MCP_SETUP.md  README.MD  claude_desktop_config_http_via_stdio.json  docker-compose.yml  main.py  pyproject.toml  test_caching.py  test_main.http  test_pydantic_validation.py  test_query_limits.py  test_validation_fix.py
mcp_server/: Dockerfile  main.py  pyproject.toml
nginx/conf.d/: default.conf
scripts/: deploy.sh  mcp_client.sh  mcp_client_stdio.sh
services/: document_processor.py  query_service.py
static/: app.js  index.html
